# shamo

./: .buildinfo  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  dev-requirements.txt  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  release.py  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help.md
.github/workflows/: docker-dev.yml  docker-tag.yml  pypi.yml
_modules/: abc.html  index.html
_modules/shamo/: utils.html
_sources/: index.rst.txt
_sources/core/: core.rst.txt  distribution.rst.txt
_sources/problems/: problems.rst.txt
_sources/quickstart/: quickstart.rst.txt
api/: api.html
core/: core.html  distribution.html  objects.html  problem.html  solution.html
docs/: Makefile
docs/src/: conf.py  index.rst  reference.rst  references.bib
docs/src/api/: api.rst
examples/: 1_model_creation.ipynb  2_eeg_forward.ipynb  2_eeg_forward_problem.ipynb  3_eeg_simulation.ipynb  4_eeg_parametric_forward.ipynb  dipole.ipynb
model/: anisotropy.html  fe_model.html  mesh_config.html  model.html  sensor.html  tissue.html
model/sources/: eeg_source.html  fe_source.html  source.html  sources.html
problems/: problems.html
problems/forward/: forward.html  forward_problem.html  tissue_property.html
quickstart/: install.html  quickstart.html
quickstart/usage/: 1_model_creation.html  eeg.html  fem.html  hd_tdcs.html  logging.html  model_creation.html  model_creation__.html  usage.html
reference/: reference.html
reference/.autosummary/: shamo.cli.html  shamo.cli.report.html  shamo.core.distributions.abc.DistABC.html  shamo.core.distributions.abc.html  shamo.core.distributions.constant.DistConstant.html  shamo.core.distributions.constant.html  shamo.core.distributions.html  shamo.core.distributions.normal.DistNormal.html  shamo.core.distributions.normal.DistTruncNormal.html  shamo.core.distributions.normal.html  shamo.core.distributions.uniform.DistUniform.html  shamo.core.distributions.uniform.html  shamo.core.fem.fem.FEM.html  shamo.core.fem.fem.html  shamo.core.fem.field.Field.html  shamo.core.fem.field.html  shamo.core.fem.group.Group.html  shamo.core.fem.group.html  shamo.core.fem.html  shamo.core.fem.sensors.abc.SensorABC.html  shamo.core.fem.sensors.abc.html  shamo.core.fem.sensors.html  shamo.core.fem.sensors.point.PointSensor.html  shamo.core.fem.sensors.point.html  shamo.core.fem.sensors.sensor.Sensor.html  shamo.core.fem.sensors.sensor.html  shamo.core.fem.sensors.surface.CircleSensor.html  shamo.core.fem.sensors.surface.RectSensor.html  shamo.core.fem.sensors.surface.SurfSensorABC.html  shamo.core.fem.sensors.surface.html  shamo.core.fem.tissue.Tissue.html  shamo.core.fem.tissue.html  shamo.core.html  shamo.core.objects.abc.ObjABC.html  shamo.core.objects.abc.html  shamo.core.objects.dir.ObjDir.html  shamo.core.objects.dir.html  shamo.core.objects.file.ObjFile.html  shamo.core.objects.file.html  shamo.core.objects.html  (+92 more)
reference/core/: core.html  distribution.html  objects.html  problem.html  solution.html
reference/model/: anisotropy.html  fe_model.html  mesh_config.html  model.html  sensor.html  tissue.html
reference/problems/: problems.html
reference/solutions/: solutions.html
shamo/: __init__.py
shamo/core/: __init__.py  distribution.py  json_object.py  objects.py  problem.py  solution.py  template_file.py  utils.py
shamo/model/: __init__.py  _anisotropy.py  _geometry.py  _sensors.py  _source.py  anisotropy.py  fe_model.py  femodel.py  mesh_config.py  sensor.py  source.py  tissue.py
shamo/solutions/: __init__.py
shamo/utils/: __init__.py  mesh.py  path.py  template_file.py
solutions/: solutions.html
solutions/forward/: common_forward_solution.html  forward.html  forward_solution.html  parametric_forward_solution.html
src/shamo/: __init__.py
tests/core/: test_json_object.py  test_template_file.py
(+487 files in other folders)
