[build-system]
requires = [
    "setuptools >= 40.6.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.py$'
exclude = '''
/(
    shamo\.egg-info
  | \.git
  | \.github
  | __pycache__
  | \.tox
  | \.venv
    )/
'''
