[metadata]
name = shamo
url = https://github.com/CyclotronResearchCentre/shamo
author = Martin Grignard
author-email = mar.grignard@uliege.be
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Medical Science Apps.
license = GPLv3
license_file = LICENSE.md
description = A tool for electromagnetic modelling of the head and sensitivity analysis.
long-description = file: README.md
long_description_content_type = text/markdown
keywords =
    eeg
    tdcs
    meg
    tms
    electromagnetics
    modelling
platform = any
project_urls =
    Bug Tracker = https://github.com/CyclotronResearchCentre/shamo/issues
    Changelog = https://github.com/CyclotronResearchCentre/shamo/blob/master/CHANGELOG.md

[options]
zip_safe = False
install_requires =
    numpy
    scipy
    pygalmesh >= 0.4.0
    gmsh
    nibabel
    scikit-learn
    chaospy
python_requires = >= 3.6
package_dir=
    =src
packages=find:
include_package_data = True

[options.packages.find]
where = src

[bdist_wheel]
universal = True

[sdist]
formats = zip, gztar
