[metadata]
name = shamo
version = 0.3.2
url = https://github.com/CyclotronResearchCentre/shamo
author = Martin Grignard
author-email = mar.grignard@uliege.be
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Medical Science Apps.
license = GPLv3
license_file = LICENSE.md
description = A tool for electromagnetic modelling of the head and sensitivity analysis.
long-description = file: README.md
long_description_content_type = text/markdown
keywords =
    eeg
    tdcs
    meg
    tms
    electromagnetics
    modelling
platform = any
project_urls =
    Bug Tracker = https://github.com/CyclotronResearchCentre/shamo/issues
    Changelog = https://github.com/CyclotronResearchCentre/shamo/blob/master/CHANGELOG.md

[options]
zip_safe = False
install_requires =
    chaospy
    gmsh
    h5py
    jinja2
    meshio
    nibabel
    nilearn
    numpy
    pygalmesh
    scikit-learn
    scipy
python_requires = >= 3.7
package_dir=
    =src
packages=find:
include_package_data = True

[options.packages.find]
where = src

[bdist_wheel]
universal = True

[sdist]
formats = zip, gztar

[tool:pytest]
testpaths =
    tests
addopts = -v
filterwarnings =
    ignore::RuntimeWarning::521

[bumpversion]
current_version = 0.3.2
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
serialize =
	{major}.{minor}.{patch}

[bumpversion:file:setup.cfg]

[bumpversion:file:src/shamo/__init__.py]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:CHANGELOG.md]
search = [Unreleased]
replace = [{new_version}]
